# indepth_analysis

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/commands/: enrich-findings.md
data/: macro_calendar.db
lecture/turboquant/: README.md  TQ-01-why-kv-cache.md  TQ-02-quantization-basics.md  TQ-03-shannon-rate-distortion.md  TQ-04-jl-lemma-random-rotation.md  TQ-05-polarquant-qjl.md  TQ-06-turboquant-full.md
scripts/: monthly_euro_macro.sh
src/indepth_analysis/: cli.py  config.py  db.py
src/indepth_analysis/analysis/: aggregator.py  fundamental.py  fundamentals_history.py  macro.py  news_calendar.py  options_flow.py  portfolio.py  sentiment.py  technical.py
src/indepth_analysis/data/: ecb_client.py  eurostat_client.py  ibkr_client.py  kcif_client.py  market_data.py  scraper_base.py  sheets_client.py  yfinance_client.py
src/indepth_analysis/models/: __init__.py  common.py  dev_welfare.py  euro_macro.py  fundamental.py  issue_track.py  macro.py  news.py  options.py  portfolio.py  reference.py  report.py  report_data.py  sentiment.py  technical.py
tests/: conftest.py  test_aggregator.py  test_charts.py  test_chunker.py  test_db.py  test_embedder.py  test_euro_macro.py  test_forexfactory_agent.py  test_formatters.py  test_fundamental.py  test_fundamentals_history.py  test_kcif_client.py  test_macro_alerts.py  test_macro_backfill.py  test_macro_sections.py  test_macro_telegram.py  test_markdown_renderer.py  test_models.py  test_news_calendar.py  test_notion_publisher.py  test_retriever.py  test_sentiment.py  test_slide_renderer.py  test_technical.py
(+57 files in other folders)
